# WhtsProtocol

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  AGENT_TASKS.md  CMakeLists.txt  CMakePresets.json  FRAGMENTATION_GUIDE.md  MODULAR_SUMMARY.md  PROJECT_SUMMARY.md  PROTOCOL_REFACTOR.md  Protocal.md  QUALITY_CHECKLIST.md  README-BUILD.md  README.md  SLAVE_DATA_COLLECTION_IMPLEMENTATION.md  SLAVE_MAIN_REFACTOR_SUMMARY.md  TODO.md  VERIFICATION_README.md  WhtsProtocol.cpp  Wireless Harness Test System Protocal V1.7.md  quick_verify.cpp  test_CMakeLists.txt  test_new_features.cpp  verify_protocol.bat
cmake/: README.md  toolchain-gcc.cmake
docs/: CMAKE_MODULAR_ARCHITECTURE.md  GPIO_ARCHITECTURE_IMPROVEMENT.md  GPIO_MODULAR_STRUCTURE_FINAL.md  GPIO_MODULE_STRUCTURE_COMPLETE.md  GPIO_PORTING_GUIDE.md  GPIO_REFACTOR_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MASTER_ARCHITECTURE_IMPROVEMENT.md  MASTER_TODO_COMPLETION_SUMMARY.md  NETWORK_ABSTRACTION_LAYER.md  SYNC_MESSAGE_CRASH_FIX.md  WIRELESS_BROADCAST_SIMULATION.md
examples/: CMakeLists.txt  continuity_collector_example.cpp  modular_usage_example.cpp  simple_hal_test.cpp  test_all_messages.cpp  test_enhanced_collector.cpp  test_gpio_module_structure.cpp  test_refactored_gpio.cpp  test_unified_gpio_interface.cpp
src/: CMakeLists.txt  WhtsProtocol.cpp  WhtsProtocol.h  WhtsProtocol_old.h  fragmentation_test.cpp  main.cpp  master_main.cpp  protocol_validation.cpp  slave_main.cpp  udp_example.cpp
src/Adapter/: CMakeLists.txt  ContinuityCollector.cpp  ContinuityCollector.h  GpioFactory.cpp  GpioFactory.h  LoggerFactory.cpp  NetworkFactory.cpp  NetworkFactory.h  SpdlogAdapter.h
src/Adapter/Collector/: CMakeLists.txt  ContinuityCollector.cpp  ContinuityCollector.h
src/Adapter/Gpio/: CMakeLists.txt  GpioFactory.cpp  GpioFactory.h
src/Adapter/Logger/: CMakeLists.txt  LoggerFactory.cpp  LoggerFactory.h
src/Adapter/Network/: CMakeLists.txt  NetworkFactory.cpp  NetworkFactory.h
src/HAL/: CMakeLists.txt  EmbeddedLogger.h  Gpio.cpp  Gpio.h  GpioFactory.cpp  GpioFactory.h  HardwareGpio.cpp  IGpio.h
src/HAL/Gpio/: CMakeLists.txt  Gpio.h  GpioFactory.cpp  HardwareGpio.h  VirtualGpio.h
src/HAL/Network/: AsioUdpSocket.h  CMakeLists.txt  IUdpSocket.h  LwipUdpSocket.h  NetworkFactory.cpp  NetworkFactory.h  NetworkManager.cpp  NetworkManager.h  README_ASIO.md  WindowsUdpSocket.cpp  WindowsUdpSocket.h  asio_example.cpp  example_usage.cpp
src/app/: CMakeLists.txt  Logger.cpp  Logger.h  NetworkManager.cpp  NetworkManager.h  main.cpp  master_main.cpp  multi_slave_main.cpp  slave_main.cpp
src/app/master_main/: CMakeLists.txt  CommandTracking.h  DeviceManager.cpp  DeviceManager.h  MasterServer.cpp  MasterServer.h  MessageHandlers.cpp  MessageHandlers.h  main.cpp
src/app/slave_main/: CMakeLists.txt  Gpio.cpp  Gpio.h  MessageProcessor.cpp  MessageProcessor.h  NetworkManager.cpp  NetworkManager.h  SlaveDevice.cpp  SlaveDevice.h  SlaveDeviceState.h  main.cpp
src/interface/: CMakeLists.txt  IGpio.h  ILogger.h  INetwork.h  IUdpSocket.h
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerFactory.cpp  LoggerFactory.h  README.md
src/platform/: CMakeLists.txt
src/platform/embedded/: CMakeLists.txt  EmbeddedLogger.cpp  EmbeddedLogger.h  HardwareGpio.cpp  HardwareGpio.h  LwipUdpSocket.cpp  LwipUdpSocket.h
src/platform/windows/: AsioUdpSocket.cpp  AsioUdpSocket.h  CMakeLists.txt  SpdlogAdapter.cpp  SpdlogAdapter.h  VirtualGpio.cpp  VirtualGpio.h  WindowsUdpSocket.cpp  WindowsUdpSocket.h
src/protocol/: CMakeLists.txt  Common.h  ProtocolProcessor.cpp  ProtocolProcessor.h  WhtsProtocol.h
src/protocol/messages/: Backend2Master.cpp  Backend2Master.h  Master2Backend.cpp  Master2Backend.h  Master2Slave.cpp  Master2Slave.h  Message.h  Slave2Backend.h  Slave2Master.cpp  Slave2Master.h
src/protocol/utils/: ByteUtils.cpp  ByteUtils.h
